--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "cines-cl",
   "version": "0.1.1",
-  "description": "",
-  "main": "index.js",
+  "description": "Fetch billboard of chilean cinemas",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
